# snake-py

./: pyproject.toml
snake_py/: controller.py  direction.py  drawer.py  game_obj.py  main.py  position.py  snake.py  snake_config.py  snake_move.py
